fixed fade showing when downloaded repos aren't collapsed, updated metric status table for less space

--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2714,6 +2714,10 @@ section.status {
 .section.showsome {
   max-height: 100px;
 }
+th,
+td {
+  padding: 0;
+}
 cite.metric {
   display: block;
   width: 100%;
